# FIRE

./: LICENSE  README.md  pyproject.toml
fire/: app.py
fire/conf/: settings.py
fire/dependencies/: database.py  service.py
fire/models/: base.py  portfolio.py  trade.py
fire/repositories/: base.py  errors.py  trade.py
fire/routes/: __init__.py  errors.py  health.py  portfolio.py  stock.py  trade.py
fire/schemas/: portfolio.py  stock.py  trade.py
fire/services/: stock.py  trade.py
migrations/: env.py
migrations/versions/: ef8db3cd768b_initial.py
tests/: conftest.py
tests/repositories/: conftest.py  trade.py
tests/routes/: __init__.py  trade.py
utils/: create_database.py
